# ocr

./: .gitignore  CHANGES_SUMMARY.md  PIPELINE_FLOW.md  README.md  README_API.md  README_PDF_TO_MD.md  api.py  csv_to_json.py  markdown_to_csv.py  pdf_to_markdown.py  preprocessing.py  pyproject.toml  run_pipeline.py  setup_service.bat  uninstall_service.bat  verify_totals.py
