[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot>=12.6.29",
    "docling>=2.71.0",
    "easyocr>=1.7.2",
    "fastapi>=0.128.0",
    "markdown>=3.10.1",
    "numpy<2.0.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pandas<3.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
